# freecadmcp

./: .cursorrules  .gitignore  README.md  claude_desktop_config.example.json  create_car.py  create_colored_car.py  cursor_mcp_launcher.sh  freecad_rpc_server.py  project.md  pyproject.toml  run_all_tests.py  test_advanced_geo.py  test_gui_state.py  test_rpc.py  test_screenshot.py
.cursor/: mcp.json
server/: error_enricher.py  freecad_bridge.py  main.py
